# littleCNN

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
dataset/mnist/: get_mnist.sh
network/: network.cpp  network.h  util.cpp  util.h
network/activation/: activation.cpp  activation.h
network/layer/: convolution.cpp  convolution.h  fully_connected.cpp  fully_connected.h  layer.cpp  layer.h  max_pooling.cpp  max_pooling.h
samples/logic/: main_logic.cpp
samples/mnist/: check.cpp  filter.cpp  main_mnist.cpp  main_mnist_conv.cpp
xml/: logic.xml  logic_xml.cpp  net.xml  xml.cpp
